// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JournalCitation renders with a mock espace record 1`] = `
<div
  className="citationContent citationJournal"
>
  <CitationTitleView
    className="citationJournalName"
    prefix=""
    suffix=" "
    value="Management international review"
  />
  <DateCitationView
    className="citationDate"
    date="2005-01-01T00:00:00Z"
    forceSpecifiedFormat={false}
    format="YYYY"
    isLocalised={false}
    prefix="("
    suffix=")."
  />
  <CitationView
    className="citationVolumeNumber"
    prefix=" "
    suffix=" "
    value="45"
  />
  <CitationView
    className="citationIssueNumber"
    prefix="("
    suffix=")."
    value="1, Special issue"
  />
  <DoiCitationView
    doi="10.14264/186337"
  />
</div>
`;

exports[`JournalCitation renders with empty publication 1`] = `
<div
  className="citationContent citationJournal"
>
  <CitationTitleView
    className="citationJournalName"
    prefix=""
    suffix=" "
  />
  <DateCitationView
    className="citationDate"
    forceSpecifiedFormat={false}
    format="YYYY"
    isLocalised={false}
    prefix="("
    suffix=")."
  />
  <CitationView
    className="citationVolumeNumber"
    prefix=" "
    suffix=" "
    value={null}
  />
  <CitationView
    className="citationIssueNumber"
    prefix="("
    suffix=")."
    value={null}
  />
  <DoiCitationView
    doi={null}
  />
</div>
`;
